# Mimeguard

./: .tmpfilexmd1ug  ConfigFile.c  ConfigFile.h  DocumentStrings.c  DocumentStrings.h  DocumentTypes.c  DocumentTypes.h  EmailHeaders.c  EmailHeaders.h  Export.c  Export.h  FileExtensions.c  FileExtensions.h  FileMagics.c  FileMagics.h  FileTypeRules.c  FileTypeRules.h  HTML.c  HTML.h  IPRegion.c  IPRegion.h  Magic.c  Magic.h  Makefile  Makefile.in  Mime.c  Mime.h  OLE.c  OLE.h  Output.c  Output.h  PDF.c  PDF.h  README.md  RTF.c  RTF.h  Settings.c  Smtp.c  Smtp.h  URL.c  (+13 more)
libUseful-2.8/: Compression.h  ConnectionChain.c  ConnectionChain.h  DataParser.c  DataParser.h  DataProcessing.c  DataProcessing.h  Encodings.h  Errors.h  Expect.h  FileSystem.c  FileSystem.h  GeneralFunctions.c  GeneralFunctions.h  Hash.c  Hash.h  Http.c  Http.h  LibSettings.h  List.c  List.h  Log.c  Log.h  Makefile  Makefile.in  OAuth.c  OAuth.h  OpenSSL.h  ParseURL.c  ParseURL.h  PatternMatch.h  Process.h  Pty.h  RawData.h  SecureMem.h  Socket.c  Socket.h  SpawnPrograms.c  SpawnPrograms.h  Stream.c  (+35 more)
libUseful-2.8/examples/: DeviantArtOAuth.c  Errors.c  FileSystemNotify.c  GoogleOAuthFull.c  GoogleOAuthImplicit.c  MSOAuth.c  Makefile  Maps.c  MastodonOAuth.c  ParseRSS.c  PocketOAuth.c  Tokenize.c  Vars.c  index.html  pattest.c
libUseful-3/: CommandLineParser.c  CommandLineParser.h  Compression.c  DataProcessing.c  FileSystem.c  FileSystem.h  Makefile  Makefile.in  Smtp.c  Stream.c  config.status  configure  configure.ac
libUseful-4/: Makefile  config.status  configure
